More dark mode bugfixes
- Made the luminosity work again
- On reload make it have the correct theme
- Stop using localStorage to store the theme

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -7,14 +7,6 @@ html, body
     line-height: 1.25
     color: #5a636a
 
-// Handle init background color, before settings are loaded
-// Fallback to system theme
-html
-    background-color: black
-@media (prefers-color-scheme: light)
-    html
-        background-color: white
-
 a
     color: #3498db
     cursor: pointer
