--- a/src/views/dashboard/Dashboard.sass
+++ b/src/views/dashboard/Dashboard.sass
@@ -19,8 +19,3 @@
         &::placeholder
             color: inherit
             opacity: 0.5
-
-    background-color: white
-
-    &.dark
-        background-color: black
